# travel-site-backend

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini  prometheus.yml  pyproject.toml
app/: cache.py  config.py  cron.py  database.py  exceptions.py  locust.py  logging.py  main.py  models.py  rabbitmq.py  redis_config.py  repository.py  template_loader.py
app/auth/: auth.py  crud.py  depends.py  models.py  router.py  schemas.py  service.py
app/booking/: depends.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
app/details/: depends.py  exceptions.py  models.py  router.py  schemas.py  service.py
app/excursions/: crud.py  depends.py  exceptions.py  files.py  models.py  router.py  schemas.py  service.py
app/images/: depends.py  exceptions.py  files.py  models.py  router.py  schemas.py  service.py
app/logging/: formats.py  handlers.py  utils.py
app/middleware/: logging_middleware.py
app/migrations/: env.py
app/migrations/versions/: 04561ada7418_add_telegram_message_id_field.py  07a2c3db5711_add_reviews_table.py  0a66d343d9f5_add_default_value_for_changed_at_filed.py  0f587df53993_change_excursions_details_table.py  10d56fb11c77_fix_date_filed_in_excursion_table.py  1b0a40cfcc4f_add_booking_status_and_telegram_user_id_.py  2d9f7edb9165_fix_is_active_filed_in_reviews_table.py  55469ef41a42_add_booking_created_and_confirm_date_.py  6606f49cd852_add_is_ctive_column_to_booking_table.py  8247a84532d5_add_excursion_images_urls_table.py  82873112a413_rework_is_active_field_in_excursions_.py  8a80df54ab74_initial_migration.py  8e25c7bd7519_add_user_info_fields.py  8f3633d98d63_add_on_update_value_for_chaged_at_filed.py  93532b7056b8_change_telegram_user_id_to_bigint.py  a5186dbaf831_fix_excursion_id_in_booking_table.py  ac1bdbb026ce_add_excursion_type.py  acbd0dc0fed7_add_booking_city.py  b30e66a75ec2_change_name_for_confirmed_at_to_changed_.py  b65a22e24f93_change_excursions_table.py  bb1f49877f5b_remove_category_field.py  cc596189b64a_change_excursion_id_in_bookings_from_.py  d5410078fbee_remove_timestamp.py  e1c5623a012f_remove_duration_field.py  e1fd5f174f86_change_excursions_table.py  e5af8285e883_init.py  ec7067457785_add_excursion_cities.py  f3a5c8a2f5a5_add_notifications_table.py  fbccadc062c0_change_name_of_created_at_and_confirmed_.py
app/notifications/: depends.py  exceptions.py  manager.py  model.py  router.py  schemas.py  service.py
app/reviews/: crud.py  depends.py  models.py  router.py  schemas.py  service.py
app/sheets/: schemas.py  service.py
app/telegram/: bot.py  filter.py  handlers.py  main.py  service.py  utils.py
app/telegram/commands/: __init__.py  add_booking.py  get_bookings.py  ping.py  start.py  toggle_booking.py
app/telegram/handlers/: change_chat_message.py  send_notification.py  toggle_booking.py
app/telegram/utils/: change_chat_message.py  keyboard.py  retry.py  send_notification.py  send_user_newsletter.py  toggle_booking.py
app/user/: depends.py  exceptions.py  models.py  router.py  schemas.py  service.py
app/utils/: cache.py  cron.py  logging.py  notifications.py  rabbitmq.py  template_loader.py
metrics/: docker-compose.yml  prometheus.yml  promtail-config.yaml
templates/: booking.html
templates/get_bookings/: bookings.html  hello.html
templates/notification/: bus.html  remainder.html  sended_bookings.html
templates/user/: confirm_booking.html
tests/unit/auth/: test_depends.py
